--- a/src/app/pages/check-list/check-list-pallet/check-list-pallet.component.html
+++ b/src/app/pages/check-list/check-list-pallet/check-list-pallet.component.html
@@ -4,6 +4,7 @@
     <nb-card status="primary">
       <nb-card-header>Remision : {{checkList?.remision}}
         <nb-badge text={{checkList?.date}} status="warning" position="top left"></nb-badge>
+        <nb-badge text={{registrado}} status="success" position="top right"></nb-badge>
       </nb-card-header>
       <nb-card-body>
         <div class="row">
