--- a/src/app/pages/check-list/check-list-main/check-list-main.component.html
+++ b/src/app/pages/check-list/check-list-main/check-list-main.component.html
@@ -49,12 +49,18 @@
         <td mat-cell *matCellDef="let element">{{element.noSello}}</td>
       </ng-container>
 
+
+      <ng-container matColumnDef="ubication">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header >UBICACIÓN</th>
+        <td mat-cell *matCellDef="let element">{{element.ubication}}</td>
+      </ng-container>
+
       <ng-container matColumnDef="stock">
         <th mat-header-cell *matHeaderCellDef mat-sort-header >STOCK</th>
         <td mat-cell *matCellDef="let element">
-          <nb-badge text="LIBERADOS" status="primary" style="position:static;" *ngIf="element.stock ==='LIBERADOS'"></nb-badge>
-          <nb-badge text="DiPONIBLES" status="danger"  style="position:static;" *ngIf="element.stock ==='DISPONIBLES'"></nb-badge>
-          <nb-badge text="N/A" status="warning"  style="position:static;" *ngIf="element.stock ===''"></nb-badge>
+          <nb-badge text="LIBERADOS" status="primary" size="medium" style="position:static;" *ngIf="element.stock ==='LIBERADOS'"></nb-badge>
+          <nb-badge text="DiPONIBLES" status="danger"  size="medium" style="position:static;" *ngIf="element.stock ==='DISPONIBLES'"></nb-badge>
+          <nb-badge text="N/A" status="warning"  size="medium" style="position:static;" *ngIf="element.stock ===null"></nb-badge>
         </td>
       </ng-container>
 
