--- a/src/app/pages/inventory/inventory-in/inventory-in.component.html
+++ b/src/app/pages/inventory/inventory-in/inventory-in.component.html
@@ -1,1 +1,82 @@
-<p>inventory-in works!</p>
+<nb-card status="primary">
+  <nb-card-header>Pallets Disponibles</nb-card-header>
+  <nb-card-body>
+      <section>
+          <!-- filter -->
+          <mat-form-field appearance="standard">
+              <mat-label>Buscar </mat-label>
+              <input matInput (keyup)="applyFilter($event)" placeholder="Search" #input>
+          </mat-form-field>
+          <!-- end filter -->
+          <div class="mat-elevation-z8">
+            <table mat-table *ngIf="dataSource" [dataSource]="dataSource" matSort (matSortChange)="sortData($event)" >
+
+              <ng-container matColumnDef="name">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header > PRODUCTO </th>
+                <td mat-cell *matCellDef="let element"> {{element.product.name}}  </td>
+              </ng-container>
+              <ng-container matColumnDef="date">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header > DATE </th>
+                <td mat-cell *matCellDef="let element"> {{element.checkList.date}}  </td>
+              </ng-container>
+              <ng-container matColumnDef="remision">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header > REMISION </th>
+                <td mat-cell *matCellDef="let element"> {{element.checkList.remision}}  </td>
+              </ng-container>
+              <ng-container matColumnDef="transportLine">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header > TRANSPORTE </th>
+                <td mat-cell *matCellDef="let element"> {{element.checkList.transportLine.name}}  </td>
+              </ng-container>
+              <ng-container matColumnDef="code">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header > CODIGO </th>
+                <td mat-cell *matCellDef="let element"> {{element.product.code}}  </td>
+              </ng-container>
+              <ng-container matColumnDef="ua">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header > LINCENCIA</th>
+                <td mat-cell *matCellDef="let element"> {{element.ua}} </td>
+              </ng-container>
+              <ng-container matColumnDef="amount">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header > CANTIDAD </th>
+                <td mat-cell *matCellDef="let element"> {{element.amount}} </td>
+              </ng-container>
+              <ng-container matColumnDef="um">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header > UM </th>
+                <td mat-cell *matCellDef="let element"> {{element.um.name}} </td>
+              </ng-container>
+              <ng-container matColumnDef="lote">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header >LOTE</th>
+                <td mat-cell *matCellDef="let element"> {{element.lote}} </td>
+              </ng-container>
+              <ng-container matColumnDef="expiration">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header > CADUCIDAD </th>
+                <td mat-cell *matCellDef="let element"> {{element.expiration}} </td>
+              </ng-container>
+              <ng-container matColumnDef="out">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header > OUT </th>
+                <td mat-cell *matCellDef="let element">
+                  <button mat-icon-button color="primary" (click)="viewRemision(element.checkList.id, element.checkList.status)">
+                    <mat-icon nbTooltip="Agrega Pallets">library_add</mat-icon>
+                  </button>
+                </td>
+              </ng-container>
+
+              <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+              <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+
+              <!-- Row shown when there is no matching data. -->
+              <tr class="mat-row" *matNoDataRow>
+              <td class="mat-cell" colspan="4">No se encontraron coincidencias "{{input.value}}"</td>
+
+              </tr>
+            </table>
+          <!--Paginator -->
+          <mat-paginator [length]="totalRegistros" [pageSize]="totalPorPagina"
+                        [pageIndex]="paginaActual" [pageSizeOptions]="pageSizeOptions"
+                        (page)="paginar($event)" aria-label="arialLabel"
+                        showFirstLastButtons>
+          </mat-paginator>
+          <!--End Paginator -->
+          </div>
+      </section>
+  </nb-card-body>
+</nb-card>
