:necktie: added dashboard

--- a/src/app/pages/inventory/inventory-in/inventory-in.component.html
+++ b/src/app/pages/inventory/inventory-in/inventory-in.component.html
@@ -1,3 +1,5 @@
+<button nbButton hero shape="semi-round" size="small" status="primary" (click)="download()">Descarga</button>
+
 <nb-card status="primary">
   <nb-card-header>Pallets Disponibles</nb-card-header>
   <nb-card-body>
