:necktie: updated report excel

--- a/src/app/pages/inventory/inventory-in/inventory-in.component.html
+++ b/src/app/pages/inventory/inventory-in/inventory-in.component.html
@@ -1,4 +1,9 @@
-<button nbButton hero shape="semi-round" size="small" status="primary" (click)="download()">Descarga</button>
+<nb-card status="primary">
+  <nb-card-header>Pallets Disponibles</nb-card-header>
+  <button nbButton hero shape="semi-round" size="small" status="primary" (click)="download()">Descarga</button>
+  <nb-card-body>
+  </nb-card-body>
+</nb-card>
 
 <nb-card status="primary">
   <nb-card-header>Pallets Disponibles</nb-card-header>
