--- a/src/app/@theme/components/footer/footer.component.scss
+++ b/src/app/@theme/components/footer/footer.component.scss
@@ -27,4 +27,10 @@
       font-size: 1.5rem;
     }
   }
+  img {
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    padding: 5px;
+    width: 150px;
+  }
 }
