--- a/src/app/pages/check-list/check-list-create/check-list-create.component.html
+++ b/src/app/pages/check-list/check-list-create/check-list-create.component.html
@@ -8,7 +8,7 @@
     <mat-dialog-content>
       <mat-stepper linear #stepper>
           <mat-step [stepControl]="firstFormGroup" [editable]="isEditable">
-            <form [formGroup]="firstFormGroup">
+            <form [formGroup]="firstFormGroup" >
               <ng-template matStepLabel>Datos generales</ng-template>
               <div class="row">
                 <div class="col-sm-3">
@@ -23,7 +23,7 @@
                   </div>
                 </div>
 
-              <!--
+          <!--
               <div class="col-sm-3">
                 <div class="form-group">
                   <mat-form-field appearance="legacy">
@@ -47,7 +47,9 @@
                   </mat-form-field>
                 </div>
               </div>
-      -->
+  -->
+  {{prefijo?.prefix}}
+
               <div class="col-sm-3">
                 <div class="form-group">
                   <mat-form-field appearance="legacy">
@@ -59,6 +61,7 @@
                   </mat-form-field>
                 </div>
               </div>
+
               <div class="col-sm-3">
                 <div class="form-group">
                   <mat-form-field appearance="legacy">
