--- a/src/app/pages/clients/client-main/client-main.component.html
+++ b/src/app/pages/clients/client-main/client-main.component.html
@@ -17,6 +17,12 @@
 
   <div class="mat-elevation-z8">
     <table mat-table [dataSource]="dataSource" matSort (matSortChange)="sortData($event)" >
+            <!-- Name Column -->
+      <ng-container matColumnDef="prefix">
+        <th mat-header-cell *matHeaderCellDef> PREFIJO </th>
+        <td mat-cell *matCellDef="let element"> {{element.prefix}} </td>
+      </ng-container>
+
       <!-- Name Column -->
       <ng-container matColumnDef="name">
         <th mat-header-cell *matHeaderCellDef mat-sort-header > CLIENTE </th>
